--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="header-wrapper">
                 <nav>
                     <ul>
-                        <li><a href="#"></a>HOME</li>
-                        <li><a href="#"></a>PORTFOLIO</li>
-                        <li><a href="#"></a>ABOUT US</li>
-                        <li><a href="#"></a>CONTACT</li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -29,7 +29,9 @@
         <div class="container">
             <div class="home_block">
                 <div class="home_left">
-                    <h1>OUR STRONG ORGANISATION</h1>
+                    <h1> OUR STRONG
+                        <span>ORGANAISATION</span>
+                    </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit,
                         sed do eiusmod tempor incididunt ut
                         labore et. ectetur adig ipis cing elit, sed do eiusmod tempor
@@ -37,8 +39,7 @@
                     <button class="contact-us-btn" type="submit">Contact Us</button>
                 </div>
                 <div class="home_right">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/UkuPyt2DnPk"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/UkuPyt2DnPk" title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
